implement landing page UI

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.23.0",
     "core-js": "^3.6.5",
     "date-fns": "^2.25.0",
+    "gsap": "^3.8.0",
     "vee-validate": "^3.4.13",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
